tests/ui/typeck/type-placeholder-fn-in-const.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated constants
  --> $DIR/type-placeholder-fn-in-const.rs:9:25
   |
LL |     const TEST: fn() -> _ = 42;
   |                         ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated constants
  --> $DIR/type-placeholder-fn-in-const.rs:4:25
   |
LL |     const TEST: fn() -> _;
   |                         ^ not allowed in type signatures

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0121`.
